# AI_Employee_Vault

./: .gitignore  Business_Goals.md  CLAUDE.md  Company_Handbook.md  Dashboard.md
.claude/commands/: create-plan.md  process-inbox.md  review-vault.md  triage-email.md  update-dashboard.md
.claude/skills/create-plan/: SKILL.md
.claude/skills/process-inbox/: SKILL.md
.claude/skills/review-vault/: SKILL.md
.claude/skills/triage-email/: SKILL.md
.claude/skills/update-dashboard/: SKILL.md
.obsidian/: workspace.json
ai_employee/: base_watcher.py  filesystem_watcher.py  gmail_watcher.py  logger.py  main.py  orchestrator.py  pyproject.toml
